[gd_scene format=3 uid="uid://cfwm40rf3ast"]

[ext_resource type="Script" uid="uid://bxwqtwqureanh" path="res://ui/game_ui/pause_menu/pause_menu.gd" id="1_1jk7p"]
[ext_resource type="PackedScene" uid="uid://cilqvuvabdmjj" path="res://ui/elements/exit_button/exit_button.tscn" id="1_vqyso"]

[node name="PauseMenu" type="Control" unique_id=1222273399]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1jk7p")

[node name="Backdrop" type="Panel" parent="." unique_id=407014683]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=572331208]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 100

[node name="MenuBackground" type="Panel" parent="MarginContainer" unique_id=434156297]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=80645639]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" unique_id=455372385]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Paused"
horizontal_alignment = 1

[node name="Buffer" type="Control" parent="MarginContainer/VBoxContainer" unique_id=1779098101]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=750626907]
layout_mode = 2
size_flags_horizontal = 8

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer" unique_id=1561435765]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer" unique_id=470666710]
unique_name_in_owner = true
layout_mode = 2
text = "Options
"

[node name="ExitToMenuButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer" unique_id=46750229]
unique_name_in_owner = true
layout_mode = 2
text = "Exit to Menu"

[node name="ExitButton" parent="MarginContainer/VBoxContainer/ButtonContainer" unique_id=862063214 instance=ExtResource("1_vqyso")]
unique_name_in_owner = true
layout_mode = 2
